# file-organizer

./: README.md  pyproject.toml
file_organizer/: __init__.py  cli.py  organizer.py
tests/: test_smoke.py
